2007-05-09  Andreas Otto  <andreas.otto@dkd.de>

	* Fixed bug #2052: Color picker does not work properly in flex forms. Thanks to David Bruehlmeier for providing a patch and a testcase.

2007-05-04  Ingo Renner  <typo3@ingo-renner.com>

	* added swedish and latvian flags to media/flags folder

2007-05-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Updated compatibility version for t3skin

2007-05-03  Ingo Renner  <typo3@ingo-renner.com>

	* fixed bug 5310: Missing Swedish flag

2007-05-02  Ingo Renner  <typo3@ingo-renner.com>

	* fixed bug 584: Changing language in user setup do not reload left frame (menu).

2007-05-02  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed: IRRE does not work with workspaces (fix only for CSV & foreign field cases)
	* Fixed: isses with previous fix discovered my Michael Stucki

2007-05-01  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #2515: jsfunc.validateform.js does not verify password fields (thanks to Joerg Wagner)
	* Fixed bug #5158: log failed mailings of t3lib_div::plainMailEncoded()

2007-04-30  Michael Stucki  <michael@typo3.org>

	* Improve the check for session support in Install Tool (see #1474). Thanks to Martin Kutschker!

2007-04-30  Oliver Hader  <oh@inpublica.de>

	* Fixed feature request #5424: Menu cache expire time should be configurable

2007-04-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #4957: CSV export stop exporting a field when there is a linebreak. Thanks for Oliver Klee for the idea and solution.
	* !!! t3lib_div::cvsValues() now exports like RFC 4180 (embedded line-breaks allowed)

2007-04-28  Andreas Otto  <andreas.otto@dkd.de>

	* Fixed bug #3649: Call to a member function formWidth() on object $GLOBALS['TBE_TEMPLATE'] instead on $GLOBALS['SOBE']. Thanks to Chi Hoang for supplying a patch.

2007-04-28  Ingo Renner  <typo3@ingo-renner.com>

	* Fixed bug #1290: TCEFORM.table.field.linkTitleToSelf-Option could be confusing