@@ -90,10 +90,13 @@ class SC_alt_menu_sel {
 		$TBE_TEMPLATE->form = '<form action="">';
 		$TBE_TEMPLATE->docType = 'xhtml_trans';
 
+			// add menu JS
+		$alt_menuObj = t3lib_div::makeInstance('alt_menu_functions');
+		$TBE_TEMPLATE->JScodeArray[] = $alt_menuObj->generateMenuJScode($loadModules->modules);
+
 		$this->content.=$TBE_TEMPLATE->startPage('Selector box menu');
 
 			// Make menu and add it:
-		$alt_menuObj = t3lib_div::makeInstance('alt_menu_functions');
 		$this->content.=$alt_menuObj->topMenu($loadModules->modules,0,'',2);
 
 			// End page:
